--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block app_content %}
   <div class="banner-img-container">
       <img src="../static/images/Snow-covered-mountain-banner.jpg" alt="snow covered mountain">
   </div>
